--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,17 +1,33 @@
-node {
-    def mvnHome
-    stage('Preparation') { // for display purposes
-        // Get some code from a GitHub repository
-        git 'https://github.com/Aravindkumar2507/sampleSelenium.git'
-
-    }
-    stage('Build') {
-                bat("mvn clean test")
-    }
-    stage('Package') {
-                echo "For It ISSSSSSS SKIPPPPEEEEEEDDDDDDDDD"
-    }
-    stage('Results') {
-        junit '**/target/surefire-reports/TEST-*.xml'
+pipeline {
+    agent any
+    stages {
+        stage('Preparation') { // for display purposes
+            steps {
+                 // Get some code from a GitHub repository
+                git 'https://github.com/Aravindkumar2507/sampleSelenium.git'
+            }
+        }
+        stage('Clean') {
+                steps {
+                        bat "mvn clean"
+                }        
+        }
+        stage('Build') {
+                steps {
+                        bat "mvn test"
+                }        
+        }
+        stage('Package') {
+                steps {
+                    echo "For It ISSSSSSS SKIPPPPEEEEEEDDDDDDDDD"
+                    bat "mvn package"
+                }    
+        }
+        stage('Results') {
+                steps {
+                    junit '**/target/surefire-reports/TEST-*.xml'
+                
+                }    
+        }
     }
 }
